force-app/main/default/objects/Plan_Item__c/Plan_Item__c.object-meta.xml
<CustomObject>
    <label>Plan Item</label>
    <nameField>
        <label>Plan Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plan Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>