force-app/main/default/objects/Plan_Item__c/fields/Plan__c.field-meta.xml
<CustomField> 
    <fullName>Plan__c</fullName> 
    <label>Plan</label> 
    <length>131072</length> 
    <type>LongTextArea</type> 
</CustomField>