force-app/main/default/objects/Plan_Item__c/fields/Review__c.field-meta.xml
<CustomField>
    <fullName>Review__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Review</label>
    <referenceTo>Review__c</referenceTo>
    <relationshipLabel>Plan Items</relationshipLabel>
    <relationshipName>Plan_Items</relationshipName>
    <type>Lookup</type>
</CustomField>